[package]
name = "hello2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.6"
serde_json = "1.0"
serde = {version= "1.0.197", features=["derive"]}
rocket = { version = "0.5.0", features = ["json"] }
eyre = "0.6.12"
clap = { version = "4.5.4", features = ["derive"] }
rmp-serde = "1.3.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }


[profile.release]
debug = true
